--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@video-js/ad-schedule-plugin",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "main": "./dist/cjs/index.js",
   "module": "./dist/mjs/index.js",
   "license": "Apache-2.0",
@@ -94,7 +94,8 @@
     "streaming",
     "advertiesment",
     "zeasn",
-    "vmap"
+    "vmap",
+    "videojs-plugin"
   ],
   "author": "Aviral Gupta",
   "bugs": {
