--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,3 +32,4 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: "$NPM_PUBLISH_KEY"
+          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
