--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,10 +26,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org/
+          registry-url: https://registry.npmjs.org/video-js
       - run: npm ci
-      - run: npm run build
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: "$NPM_PUBLISH_KEY"
           NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
