--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -34,5 +34,5 @@ jobs:
       - run: npm run build
       - run: npm publish
         env:
-          NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_KEY }}
           ACTIONS_STEP_DEBUG: true  # Enable debug logging
