--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build
-      - run: npm publish
+      - run: echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > ~/.npmrc
         env:
-          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_KEY }}
-          ACTIONS_STEP_DEBUG: true  # Enable debug logging
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: npm publish
